@@ -185,6 +185,7 @@
 - v1.1.6 (xx-11-21):
 	- Improved custom animations and fixed a few issues with animation loading.
 	- Added new client and server scripting functions: unloadAnimation, isItemIntelligent, setItemIntelligent, getItemAI, g/setAIEnemy.
+	- Minecart is now affected properly by global gravity.
 	
 	
 	
